# summarizeaudio

./: .gitignore  BACKLOG.md  CLAUDE.md  Install.bat  README.md  config.toml.example  pyproject.toml  setup.ps1  setup.sh
assets/: generate_icons.py  generate_pulse_icons.py
docs/: adr.md  architecture.md  learnings.md
docs/superpowers/plans/: 2026-05-30-settings-window.md  2026-06-03-launch-at-login.md
docs/superpowers/specs/: 2026-03-15-audio-summarize-design.md  2026-05-13-ui-window-redesign.md  2026-05-30-settings-window-design.md  2026-06-02-color-fill-icon-states-design.md  2026-06-03-launch-at-login-design.md
summarizeaudio/: __main__.py  alert_window.py  chooser_window.py  config.py  diarization.py  diarizer.py  error_handler.py  history_window.py  namer.py  notifier.py  ollama_client.py  pipeline.py  prompt_editor.py  recorder.py  renamer.py  sessions.py  settings_window.py  startup.py  summarizer.py  transcriber.py  tray.py  ui_dispatcher.py  window_manager.py  workflow_window.py
tests/: conftest.py  test_alert_window.py  test_chooser_window.py  test_config.py  test_diarization.py  test_diarizer.py  test_error_handler.py  test_history_window.py  test_namer.py  test_notifier.py  test_ollama_client.py  test_pipeline.py  test_prompt_editor.py  test_recorder.py  test_recorder_auto_name.py  test_renamer.py  test_sessions.py  test_settings_window.py  test_startup.py  test_summarizer.py  test_transcriber.py  test_tray.py  test_tray_pulse.py  test_ui_dispatcher.py  test_window_manager.py  test_workflow_window.py
