[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "summarizeaudio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pystray>=0.19",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pydub>=0.25",
    "faster-whisper>=1.0",
    "requests>=2.31",
    "plyer>=2.1",
    "Pillow>=10.0",
    "tomli>=2.0; python_version < '3.11'",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
diarization = ["pyannote.audio>=3.1"]

[project.scripts]
summarizeaudio = "summarizeaudio.__main__:main"

[tool.setuptools.packages.find]
include = ["summarizeaudio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
